--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.europa</groupId>
-    <artifactId>springblog</artifactId>
+    <artifactId>codeon</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springblog</name>
-    <description>Demo project for Spring Boot Blog</description>
+    <name>codeon</name>
+    <description>CodeOn Capstone</description>
 
     <properties>
         <java.version>11</java.version>
