changing the path for .DS_Store. it looks like it is incorrect and lots of those files have been getting pushed around.

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,4 @@ src/main/resources/application.properties
 src/main/resources/static/js/keys.js
 src/main/resources/public/js/keys.js
 
-.DS_STORE
+**/.DS_STORE
